k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mindtechpy-web
  labels:
    name: mindtechpy-web
